--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "usmaks",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.13.4",
+    "johnny-five": "^0.9.19",
+    "socket.io": "^1.4.5",
+    "temporal": "^0.5.0"
+  }
 }
