--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "johnny-five": "^0.9.19",
+    "serialport": "^2.0.6",
     "socket.io": "^1.4.5",
     "temporal": "^0.5.0"
   }
