--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "johnny-five": "^0.9.19",
     "serialport": "^2.0.6",
     "socket.io": "^1.4.5",
-    "temporal": "^0.5.0"
+    "temporal": "^0.5.0",
+    "xbee": "0.0.4"
   }
 }
